--- a/demo/chat/src/containers/input/Input.css
+++ b/demo/chat/src/containers/input/Input.css
@@ -22,7 +22,7 @@ span.text-input {
 }
 
 .message-input-container .write-link.attach {
-  margin: auto 1rem auto 0.5rem;
+  margin: 1rem 1rem auto 0.5rem;
 }
 
 .message-input-container .attachment-preview {
